# kasthuri2015

./: .gitignore  pyproject.toml
ramonify/: mmc6.xls
src/kasthuri2015/: __init__.py  bossdb.py  claims.py  data.py  validate.py  validate_graphs.py  validate_sasd.py
tests/: test_bossdb.py  test_claims.py  test_data.py  test_validate.py  test_validate_graphs.py  test_validate_sasd.py
