[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kasthuri2015"
version = "0.1.0"
description = "Reproducible claims from Kasthuri et al. 2015 saturated reconstruction of neocortex"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "NeuroData", email = "support@neurodata.io"},
]
keywords = ["neuroscience", "connectomics", "electron-microscopy", "kasthuri"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
    "scikit-image>=0.21",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/wrgr/kasthuri2015"
Repository = "https://github.com/wrgr/kasthuri2015"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
